k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8081"
    spec:
      containers:
        - name: myapp  # Note the dash here indicating a list item
          image: myregistry.local:5000/myapp:20240218165514
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "250m" # 250 millicores, or 0.25 of a CPU
              memory: "512Mi" # 512 Mebibytes of memory
            limits:
              cpu: "500m" # 500 millicores, or 0.5 of a CPU
              memory: "1Gi" # 1 Gibibyte of memory
          ports:
            - containerPort: 8081
      imagePullSecrets:
        - name: myregistrysecret
